<resources>
    <string name="app_name">ChaBuFCP</string>
    <string name="action_settings">Settings</string>
    <string name="action_confirm">ยืนยัน</string>
    <!-- Strings related to login -->
    <string name="text_username">ชื่อผู้ใช้</string>
    <string name="text_password">รหัสผ่าน</string>
    <string name="text_sign_in">เข้าสู่ระบบ</string>
    <string name="text_log_in">เข้าสู่ระบบ</string>
    <string name="text_log_out">Log out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email  completions." </string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="number_table">หมายเลขโต๊ะ</string>
    <string name="number_customer">จำนวนลูกค้า</string>
    <string name="submit">ยืนยัน</string>
    <string name="change_order">สั่งเพิ่มเติม</string>
    <string name="pay_money">ชำระเงิน</string>
    <!-- Title -->
    <string name="title_activity_order_menu">รายการอาหาร</string>
    <string name="title_activity_add_table">เพิ่มโต๊ะใหม่</string>
    <string name="title_activity_navigation_user">ลูกค้าทั้งหมด</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_test_login">Sign in</string>
    <string name="title_activity_check_bill">Check Bill</string>
    <string name="title_activity_history">ประวัติรายการอาหาร</string>
    <string name="title_activity_profile">ข้อมูลพนักงาน</string>
    <string name="title_activity_connfirm_checkBill">ยืนยันการชำระเงิน</string>

    <string name="title_check_order">รายการทั้งหมด</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
